chore: add faker package; change linting rules; add game constants

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
       "src",
       "test"
     ],
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "allowUnreachableCode": true
   },
   "include": [
     "src",
