--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,10 @@
   },
   "rules": {
     "@typescript-eslint/strict-boolean-expressions": "off",
-    "@typescript-eslint/consistent-type-definitions": "off"
+    "@typescript-eslint/consistent-type-definitions": "off",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/method-signature-style": "off",
+    "@typescript-eslint/array-type": "off",
+    "no-unreachable": "off"
   }
 }
