--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/method-signature-style": "off",
     "@typescript-eslint/array-type": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
     "no-unreachable": "off"
   }
 }
