--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "test": "npx jest"
+    "test": "npx jest --verbose"
   },
   "keywords": [],
   "author": "elimarp",
