chore: gitignore test coverage and dist; add test scripts;

--- a/jest.config.json
+++ b/jest.config.json
@@ -1,6 +1,7 @@
 {
   "modulePaths": [
-    "<rootDir>"
+    "<rootDir>/src"
   ],
-  "moduleDirectories": ["<rootDir>", "node_modules"]
+  "moduleDirectories": ["<rootDir>", "node_modules"],
+  "coverageDirectory": "test/coverage"
 }
