--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "@typescript-eslint/method-signature-style": "off",
     "@typescript-eslint/array-type": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-floating-promises": "off",
     "no-unreachable": "off"
   }
 }
