--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "quake-log-parser",
+  "name": "seismic",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
   "scripts": {
     "test": "npx jest --verbose",
     "test:coverage": "npx jest --collectCoverage",
-    "test:dev": "npx jest --watch"
+    "test:dev": "npx jest --watch",
+    "build": "npx tsc",
+    "dev": "npx ts-node src",
+    "start": "node dist/src"
   },
   "keywords": [],
   "author": "elimarp",
@@ -17,6 +20,7 @@
     "@babel/preset-typescript": "^7.24.7",
     "@faker-js/faker": "^8.4.1",
     "@jest/globals": "^29.7.0",
+    "@types/cli-table": "^0.3.4",
     "@types/jest": "^29.5.12",
     "@types/node": "20.12.7",
     "@types/yargs": "^17.0.32",
@@ -32,6 +36,11 @@
   },
   "dependencies": {
     "@inquirer/prompts": "^5.1.2",
+    "@inquirer/select": "^2.4.0",
+    "chalk": "^4.1.2",
+    "cli-table": "^0.3.11",
+    "inquirer-action-select": "^0.0.3",
+    "inquirer-select-pro": "^1.0.0-alpha.6",
     "yargs": "^17.7.2"
   }
 }
